# apisec-agent

./: .env.example  .gitignore  README.md  apisec-agent-intelligent-gathering-enhancement.md  pyproject.toml  requirements.txt
apisec/: __init__.py  cli.py
apisec/agent/: __init__.py  chat.py  llm.py  tools.py  validator.py
apisec/agent/flows/: __init__.py  upload_flow.py
apisec/config/: __init__.py  generator.py  schema.py
apisec/connectors/: __init__.py  apisec_platform.py  aws_api_gateway.py  aws_secrets.py  base.py  bitbucket.py  bruno.py  env_file.py  gitlab.py  har.py  insomnia.py  jest_supertest.py  kong.py  postman.py  vault.py
apisec/inference/: __init__.py  devops.py  env.py  fixtures.py  gateway_logs.py  infer.py  logs.py  openapi.py  postman.py  scanner.py  strategy.py  test_logs.py
apisec/integrations/: __init__.py  github.py
apisec/parsers/: __init__.py  tests.py
apisec/pr/: __init__.py  github.py
apisec/tests/: __init__.py  test_validator.py
apisec/tools/: __init__.py  registry.py
apisec/validators/: __init__.py  token.py
prompts/: system_prompt.md
test-apis/orders-api/: .env.example
test-apis/orders-api/bruno/auth/: login.bru
test-apis/orders-api/bruno/environments/: development.bru
test-apis/orders-api/bruno/orders/: bola-attack.bru  create-order.bru  get-own-order.bru  list-orders.bru
test-apis/orders-api/bruno/products/: list-products.bru
test-apis/orders-api/docs/: openapi.yaml
test-apis/orders-api/fixtures/: orders.json  products.json  users.json
test-apis/orders-api/har/: orders-api-traffic.har
test-apis/orders-api/insomnia/: insomnia-export.json
test-apis/orders-api/postman/: orders-api.postman_collection.json  orders-api.postman_environment.json
test-apis/orders-api/tests/: orders.test.js  package.json
